- fixing carousel dots on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -622,6 +622,7 @@
       .swiper-pagination {
         top: -42%;
         gap: 2.5rem;
+        width: 100% !important;
       }
     }
   }
